--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Invictrix | Legacy in Motion</title>
+    <meta
+      name="description"
+      content="For Members-Only: A world of access at your command."
+    />
+    <meta
+      property="og:image"
+      content="https://invictrixventures.com/preview-logo.jpg"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://invictrixventures.com/" />
   </head>
   <body>
     <div id="root"></div>
